UI: Fix alignment of sidenav arrows and manual run clipboard copy
PR #2480

--- a/monkey/monkey_island/cc/ui/src/styles/App.css
+++ b/monkey/monkey_island/cc/ui/src/styles/App.css
@@ -222,6 +222,10 @@ body {
   margin-left: 1em;
 }
 
+.pull-right{
+    float: right;
+}
+
 /*
  * Map Preview Pane
  */
